2005-07-19 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/error.h: Added `catch_all' macro for simplifying
	  exception handling.
	* reroot/libreroot/cwd.cc: Uses `catch_all'.
	* reroot/libreroot/filename.cc: Uses `catch_all'.

	* reroot/shared_implementation.cc: Added `do_malloc' & `do_realloc' from
	  reroot/rerootd/alloc.cc.
	* reroot/libreroot/alloc.cc: Removed.
	* reroot/rerootd/alloc.cc: Removed.

	* reroot/rerootd/file.h: Added.

	* reroot/rerootd/messageloop.cc: Added.
	* reroot/rerootd/rerootd.h: Added `message_loop' declaration.
	* reroot/rerootd/rerootd.cc (main): Added call to `message_loop'.

2005-07-18 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/rerootd/shared.cc: Added.  Includes shared_implementation.cc.

	* reroot/libreroot/alloc.h: Moved to reroot/alloc.h.
	* reroot/libreroot/alloc.cc (do_realloc): Made sure `std::realloc' is
	  called, not a recursive call to `reroot::realloc'.

	* reroot/rerootd/alloc.cc: Copied from libreroot/alloc.cc, throws
	  `std::bad_alloc' exception instead of calling `error' if allocation
	  fails.

	* reroot/message.h: Fixed including of libreroot/rerootd specific
	  headers.  Removed non-inline functions.  Fixed friend declarations to
	  use operators from namespace `reroot'.
	* reroot/shared_implementation.cc: Added non-inline functions from
	  message.h.  Removed packet metadata equality operator (inequality
	  operator is sufficient).  Wrote message sending & receiving operators.
	* reroot/libreroot/messagequeue.cc: Removed commented out `send' &
	  `receive' functions.

2005-07-12 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/alloc.cc, reroot/libreroot/alloc.h: Added.
	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Moved memory
	  allocation functions to alloc.cc & alloc.h.

	* reroot/shared_implementation.cc: Added.
	* reroot/libreroot/shared.cc: Added.  Includes shared_implementation.cc.